--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,23 +4,22 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-    {% if state is mapping %}
+        {% if name == 'None' %}
         <H1>States</H1>
         <UL>
-        {% for s in state.values()|sort(attribute="name") %}
-            <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
-        {% endfor %}
+            {% for state in states | sort(attribute='name') %}
+            <LI>{{state.id|e}}: <B>{{state.name|e}}</B></LI>
+            {% endfor %}
         </UL>
-    {% elif state is defined %}
-        <H1>State: {{ state.name }}</H1>
+        {% elif states.name == name %}
+        <H1>States: {{ name }}</H1>
         <H3>Cities:</H3>
-        <UL>
-        {% for city in state.cities|sort(attribute="name") %}
-            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-        {% endfor %}
+        <UL>{% for city in states.cities | sort(attribute='name') %}
+            <LI>{{city.id|e}}: <B>{{city.name|e}}</B></LI>
+            {% endfor %}
         </UL>
-    {% else %}
+        {% else %}
         <H1>Not found!</H1>
-    {% endif %}
+        {% endif %}
     </BODY>
 </HTML>
